# studentprognose_new

./: .gitignore  cli.py  configuration.yaml  main.py  pyproject.toml
output/: ~$output_20251003_123447x.xlsx
scripts/: helper.py  load_data.py  main.py  postprocess.py  transform_data.py
scripts/models/: cumulative.py  ensemble.py  higher-years.py  higher_years.py  individual.py  ratio.py
scripts/standalone/: clear_output_dir.py  evaluate_results.py  find_optimal_sarima_parameters.py  update_total_file.py
